--- a/src/main/webapp/hostdash.html
+++ b/src/main/webapp/hostdash.html
@@ -5,6 +5,6 @@
 		<title>Insert title here</title>
 	</head>
 <body>
-	<h1>This is the dashboard</h1>
+	<h1>This is the host dashboard</h1>
 </body>
 </html>
