--- a/src/main/webapp/guestdash.html
+++ b/src/main/webapp/guestdash.html
@@ -6,5 +6,8 @@
 </head>
 <body>
 <h1>This is the guest dashboard.</h1>
+	<form action="dashboard" method="post">
+		<input type="submit" value="Log out">
+	</form>
 </body>
 </html>
