--- a/src/main/webapp/hostdash.html
+++ b/src/main/webapp/hostdash.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="ISO-8859-1">
-		<title>Insert title here</title>
-	</head>
+<head>
+<meta charset="ISO-8859-1">
+<title>Insert title here</title>
+</head>
 <body>
 	<h1>This is the host dashboard</h1>
+	<form action="dashboard" method="post">
+		<input type="submit" value="Log out">
+	</form>
 </body>
 </html>
