--- a/src/main/webapp/guestdash.html
+++ b/src/main/webapp/guestdash.html
@@ -6,6 +6,9 @@
 </head>
 <body>
 <h1>This is the guest dashboard.</h1>
+	<ul>
+		<li><a href="reservations">Check room availability and reserve rooms</a></li>
+	</ul>
 	<form action="dashboard" method="post">
 		<input type="submit" value="Log out">
 	</form>
