--- a/src/main/webapp/reservations.html
+++ b/src/main/webapp/reservations.html
@@ -18,8 +18,6 @@
 				  let form_data = $("#datepicker").serialize();
 				  let start = $("#checkin").datepicker('getDate');
 				  let end = $("#checkout").datepicker('getDate');
-				  console.log(start);
-				  console.log(end);
 				  
 				  if((end - start) > 0){
 					  $("#rooms_instructions").show();
@@ -27,7 +25,7 @@
 						  $("#rooms").empty();
 						  $.each(data, function(index, room) {    // Iterate over the JSON array.
 							  	$("<form>").appendTo("#rooms").attr("id", room.roomNumber).attr("class", "rez")
-							  		.append($("<input>").attr("type", "hidden").attr("name", "room_number").attr("value", room.roomNumber))
+							  		.append($("<input>").attr("type", "hidden").attr("id", "room_number").attr("name", "room_number").attr("value", room.roomNumber))
 							  		.append($("<a>").attr("href", "#").attr("class", "submit_rez").text(room.roomNumber))
 					        });
 					  });
@@ -36,12 +34,17 @@
 				  }
 			  });
 			  
-			  $(".rez").on("click", $(".submit_rez"), function(){
+			  $("#rooms").on("click", ".submit_rez", function(){
 				  let data = {
 						  "checkin": $("#checkin").val(),
 						  "checkout": $("#checkout").val(),
-						  "room_number": $(this).attr()
-				  }
+						  "room_number": $(this).parent().find("#room_number").val(),
+						  "reserve": "reserve"
+				  };
+				  $.post("reservations", data, function(data,status){
+					  $("#rooms").empty();
+					  $("#rooms").text(data);
+				  })
 			  });
 		});
 		</script>
