Routing for host reservation management

--- a/src/main/webapp/guestdash.html
+++ b/src/main/webapp/guestdash.html
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-<h1>This is the guest dashboard.</h1>
+<h1>This is the guest dashboard</h1>
 	<ul>
 		<li><a href="reservations">Check room availability and reserve rooms</a></li>
 	</ul>
