--- a/src/main/webapp/hostdash.html
+++ b/src/main/webapp/hostdash.html
@@ -6,6 +6,9 @@
 </head>
 <body>
 	<h1>This is the host dashboard</h1>
+	<ul>
+		<li><a href="reservations">Manage guest reservations</a></li>
+	</ul>
 	<form action="dashboard" method="post">
 		<input type="submit" value="Log out">
 	</form>
