HTML page titles
Might just need those.

--- a/src/main/webapp/guestdash.html
+++ b/src/main/webapp/guestdash.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>Revature Inn and Suites - Guest Dashboard</title>
 </head>
 <body>
 <h1>This is the guest dashboard</h1>
