--- a/src/main/webapp/rezmanager.html
+++ b/src/main/webapp/rezmanager.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>Revature Inn and Suites - Reservations Management</title>
 </head>
 <body>
 	<h1>Reservations manager</h1>
