--- a/src/main/webapp/hostdash.html
+++ b/src/main/webapp/hostdash.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>Revature Inn and Suites - Host Dashboard</title>
 </head>
 <body>
 	<h1>This is the host dashboard</h1>
