--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>Revature Inn and Suites - Login</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<h1>Revature Hotel</h1>
+	<h1>Revature Inn and Suites</h1>
 	<div id="alert">Invalid username or password. Try again.</div>
 	<form action="login" method="POST">
 		<div class="field">
