--- a/src/main/webapp/hostdash.html
+++ b/src/main/webapp/hostdash.html
@@ -5,9 +5,10 @@
 <title>Revature Inn and Suites - Host Dashboard</title>
 </head>
 <body>
-	<h1>This is the host dashboard</h1>
+	<h1>Dashboard</h1>
 	<ul>
 		<li><a href="reservations">Manage guest reservations</a></li>
+		<li><a href="rooms">Manage rooms</a></li>
 	</ul>
 	<form action="dashboard" method="post">
 		<input type="submit" value="Log out">
