--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<h1>Revature Inn and Suites</h1>
+	<h1>Revature Inn and Suites Login</h1>
 	<div id="alert">Invalid username or password. Try again.</div>
 	<form action="login" method="POST">
 		<div class="field">
