--- a/src/main/webapp/reservations.html
+++ b/src/main/webapp/reservations.html
@@ -80,6 +80,7 @@
 	</head>
 	<body>
 		<main>
+			<h1>Reservations</h1>
 			<div id="controls">
 				<form id="datepicker">
 					Start date: <input type="text" class="date" id="checkin" name="checkin"><br /> 
