--- a/src/main/webapp/rezmanager.html
+++ b/src/main/webapp/rezmanager.html
@@ -8,6 +8,7 @@
 		<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 		<script>
+		// TODO: Error handling on ALL of this shit.
 		$(function(){
 			list_reservations();
 			
@@ -74,7 +75,7 @@
 		</script>
 	</head>
 	<body>
-		<h1>Reservations manager</h1>
+		<h1>Reservations Management</h1>
 		<main>
 			<div id="rooms"></div>
 			<div><a href="dashboard">Back to Dashboard</a></div>
