--- a/src/main/webapp/hostdash.html
+++ b/src/main/webapp/hostdash.html
@@ -9,6 +9,7 @@
 	<ul>
 		<li><a href="reservations">Manage guest reservations</a></li>
 		<li><a href="rooms">Manage rooms</a></li>
+		<li><a href="guests">Guest list</a></li>
 	</ul>
 	<form action="dashboard" method="post">
 		<input type="submit" value="Log out">
