--- a/src/main/webapp/guestdash.html
+++ b/src/main/webapp/guestdash.html
@@ -8,6 +8,7 @@
 <h1>Dashboard</h1>
 	<ul>
 		<li><a href="reservations">Check room availability and reserve rooms</a></li>
+		<li><a href="profile">View and update profile</a></li>
 	</ul>
 	<form action="dashboard" method="post">
 		<input type="submit" value="Log out">
