--- a/src/main/webapp/hostdash.html
+++ b/src/main/webapp/hostdash.html
@@ -10,6 +10,7 @@
 		<li><a href="reservations">Manage guest reservations</a></li>
 		<li><a href="rooms">Manage rooms</a></li>
 		<li><a href="guests">Guest list</a></li>
+		<li><a href="profile">View and update profile</a></li>
 	</ul>
 	<form action="dashboard" method="post">
 		<input type="submit" value="Log out">
